# python_labs

./: README.md
labs/lab07/: .coverage  README.md  pyproject.toml  pytest.ini
labs/lab07/.pytest_tmp/: test_csv_to_json_basic_roundtrcurrent  test_csv_to_json_csv_without_rcurrent  test_csv_to_json_duplicate_heacurrent  test_csv_to_json_empty_header_current  test_csv_to_json_invalid_identcurrent  test_csv_to_json_missing_headecurrent  test_csv_to_json_raises_on_dupcurrent  test_csv_to_json_raises_on_empcurrent  test_csv_to_json_raises_on_miscurrent  test_csv_to_json_roundtripcurrent  test_csv_to_json_varying_columcurrent  test_csv_to_xlsx_basiccurrent  test_csv_to_xlsx_column_widthscurrent  test_csv_to_xlsx_empty_filecurrent  test_csv_to_xlsx_missing_filecurrent  test_csv_to_xlsx_no_headercurrent  test_csv_to_xlsx_wrong_extensicurrent  test_json_to_csv_absolute_pathcurrent  test_json_to_csv_empty_input_rcurrent  test_json_to_csv_empty_or_not_current  test_json_to_csv_first_elementcurrent  test_json_to_csv_invalid_extencurrent  test_json_to_csv_malformed_jsocurrent  test_json_to_csv_non_dict_elemcurrent  test_json_to_csv_none_valuescurrent  test_json_to_csv_roundtrip_mincurrent  test_nonexistent_path_raisescurrent  test_roundtrip_preserves_fieldcurrent
labs/lab07/.pytest_tmp/test_csv_to_json_basic_roundtr0/: out.json  people.csv
labs/lab07/.pytest_tmp/test_csv_to_json_duplicate_hea0/: dup.csv
labs/lab07/.pytest_tmp/test_csv_to_json_invalid_ident0/: invalid_headers.csv
labs/lab07/libs/: json_csv.py  text.py
labs/lab07/tests/: libs  test_json_csv.py  test_text.py
(+79 files in other folders)
